--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
 	"dependencies": {
 		"@lucide/svelte": "^0.539.0",
 		"@unpic/svelte": "^1.0.0",
+		"bun": "^1.2.20",
 		"embla-carousel-autoplay": "^8.6.0",
 		"mode-watcher": "^1.1.0",
 		"tw-animate-css": "^1.3.6",
