fix: vercel json configs

--- a/vercel.json
+++ b/vercel.json
@@ -5,5 +5,11 @@
   ],
   "routes": [
     { "src": "/(.*)", "dest": "/" }
-  ]
+  ],
+  "build": {
+    "env": {
+      "VERCEL_ENV": "production"
+    }
+  },
+  "outputDirectory": "build"
 }
