--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
 		"@eslint/js": "^9.33.0",
 		"@inlang/cli": "^3.0.12",
 		"@inlang/paraglide-js": "2.0.11",
-		"@sveltejs/adapter-cloudflare": "^7.1.3",
+		"@sveltejs/adapter-vercel": "^5.10.2",
 		"@sveltejs/kit": "^2.30.1",
 		"@sveltejs/vite-plugin-svelte": "^6.1.2",
 		"@tailwindcss/forms": "^0.5.10",
@@ -32,6 +32,7 @@
 		"clsx": "^2.1.1",
 		"deepl-node": "^1.19.0",
 		"embla-carousel-svelte": "^8.6.0",
+		"esbuild": "^0.25.9",
 		"eslint": "^9.33.0",
 		"eslint-config-prettier": "^10.1.8",
 		"eslint-plugin-svelte": "^3.11.0",
