--- a/vercel.json
+++ b/vercel.json
@@ -1,11 +1,15 @@
 {
   "version": 2,
-  "headers": [
+  "routes": [
     {
-      "source": "/videos/(.*)",
-      "headers": [
-        { "key": "Cache-Control", "value": "public, max-age=31536000, immutable" }
-      ]
+      "src": "/videos/(.*)",
+      "headers": {
+        "Cache-Control": "public, max-age=31536000, immutable"
+      }
+    },
+    {
+      "src": "/(.*)",
+      "dest": "/"
     }
   ]
 }
