--- a/package.json
+++ b/package.json
@@ -23,8 +23,8 @@
 		"@inlang/cli": "^3.0.12",
 		"@inlang/paraglide-js": "2.0.11",
 		"@sveltejs/adapter-vercel": "^5.10.2",
-		"@sveltejs/kit": "^2.30.1",
-		"@sveltejs/vite-plugin-svelte": "^6.1.2",
+		"@sveltejs/kit": "^2.36.1",
+		"@sveltejs/vite-plugin-svelte": "^6.1.3",
 		"@tailwindcss/forms": "^0.5.10",
 		"@tailwindcss/typography": "^0.5.16",
 		"@tailwindcss/vite": "^4.1.12",
@@ -42,7 +42,7 @@
 		"prettier": "^3.6.2",
 		"prettier-plugin-svelte": "^3.4.0",
 		"prettier-plugin-tailwindcss": "^0.6.14",
-		"svelte": "^5.38.1",
+		"svelte": "^5.38.2",
 		"svelte-check": "^4.3.1",
 		"sveltekit-superforms": "^2.27.1",
 		"tailwind-merge": "^3.3.1",
@@ -51,7 +51,7 @@
 		"tailwindcss-animate": "^1.0.7",
 		"typescript": "^5.9.2",
 		"typescript-eslint": "^8.39.1",
-		"vite": "^7.1.2"
+		"vite": "^7.1.3"
 	},
 	"dependencies": {
 		"@lucide/svelte": "^0.539.0",
@@ -63,6 +63,6 @@
 		"valibot": "^1.1.0"
 	},
 	"engines": {
-		"node": ">=18"
+		"node": "20.x"
 	}
 }
